--- a/SPW/SPW.vcxproj
+++ b/SPW/SPW.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="DebugCamera.cpp" />
     <ClCompile Include="DebugInput.cpp" />
     <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="Firefly.cpp" />
     <ClCompile Include="GameBody.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Graphics.cpp" />
@@ -191,6 +192,7 @@
     <ClInclude Include="DebugCamera.h" />
     <ClInclude Include="DebugInput.h" />
     <ClInclude Include="Enemy.h" />
+    <ClInclude Include="Firefly.h" />
     <ClInclude Include="GameBody.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Graphics.h" />
