--- a/SPW/SPW.vcxproj.filters
+++ b/SPW/SPW.vcxproj.filters
@@ -182,6 +182,9 @@
     <ClCompile Include="LevelData.cpp">
       <Filter>Fichiers sources\Assets</Filter>
     </ClCompile>
+    <ClCompile Include="Firefly.cpp">
+      <Filter>Fichiers sources\GameObject\GameBody\Collectable</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Settings.h">
@@ -312,6 +315,9 @@
     </ClInclude>
     <ClInclude Include="LevelData.h">
       <Filter>Fichiers sources\Assets</Filter>
+    </ClInclude>
+    <ClInclude Include="Firefly.h">
+      <Filter>Fichiers sources\GameObject\GameBody\Collectable</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
