--- a/SPW/SPW.vcxproj
+++ b/SPW/SPW.vcxproj
@@ -161,16 +161,20 @@
     <ClCompile Include="LevelParser.cpp" />
     <ClCompile Include="LevelScene.cpp" />
     <ClCompile Include="LevelSelection.cpp" />
+    <ClCompile Include="lfalling.cpp" />
+    <ClCompile Include="lleft.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MainCamera.cpp" />
-    <ClCompile Include="monvante1.cpp" />
+    <ClCompile Include="sfalling.cpp" />
     <ClCompile Include="MouseInput.cpp" />
-    <ClCompile Include="mouvante2.cpp" />
+    <ClCompile Include="lright.cpp" />
     <ClCompile Include="Nut.cpp" />
     <ClCompile Include="ObjectManager.cpp" />
     <ClCompile Include="PauseMenu.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="sleft.cpp" />
+    <ClCompile Include="sright.cpp" />
     <ClCompile Include="StartScreen.cpp" />
     <ClCompile Include="StaticMap.cpp" />
     <ClCompile Include="Text.cpp" />
@@ -209,16 +213,20 @@
     <ClInclude Include="LevelParser.h" />
     <ClInclude Include="LevelScene.h" />
     <ClInclude Include="LevelSelection.h" />
+    <ClInclude Include="lfalling.h" />
+    <ClInclude Include="lleft.h" />
     <ClInclude Include="MainCamera.h" />
     <ClInclude Include="MouseInput.h" />
-    <ClInclude Include="mouvante1.h" />
-    <ClInclude Include="mouvante2.h" />
+    <ClInclude Include="sfalling.h" />
+    <ClInclude Include="lright.h" />
     <ClInclude Include="Nut.h" />
     <ClInclude Include="ObjectManager.h" />
     <ClInclude Include="PauseMenu.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Settings.h" />
+    <ClInclude Include="sleft.h" />
+    <ClInclude Include="sright.h" />
     <ClInclude Include="StartScreen.h" />
     <ClInclude Include="StaticMap.h" />
     <ClInclude Include="Text.h" />
