--- a/SPW/SPW.vcxproj
+++ b/SPW/SPW.vcxproj
@@ -165,7 +165,7 @@
     <ClCompile Include="lleft.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MainCamera.cpp" />
-    <ClCompile Include="nutdébile.cpp" />
+    <ClCompile Include="nutdebile.cpp" />
     <ClCompile Include="sfalling.cpp" />
     <ClCompile Include="MouseInput.cpp" />
     <ClCompile Include="lright.cpp" />
