--- a/SPW/SPW.vcxproj
+++ b/SPW/SPW.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="AssetManager.cpp" />
     <ClCompile Include="Background.cpp" />
     <ClCompile Include="Bonus.cpp" />
+    <ClCompile Include="Boss.cpp" />
     <ClCompile Include="Brick.cpp" />
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="Camera.cpp" />
@@ -182,6 +183,7 @@
     <ClCompile Include="TitleCamera.cpp" />
     <ClCompile Include="TitleCanvas.cpp" />
     <ClCompile Include="TitleScene.cpp" />
+    <ClCompile Include="Totem.cpp" />
     <ClCompile Include="UIObject.cpp" />
     <ClCompile Include="Utils.cpp" />
   </ItemGroup>
@@ -190,6 +192,7 @@
     <ClInclude Include="AssetManager.h" />
     <ClInclude Include="Background.h" />
     <ClInclude Include="Bonus.h" />
+    <ClInclude Include="Boss.h" />
     <ClInclude Include="Brick.h" />
     <ClInclude Include="Button.h" />
     <ClInclude Include="Camera.h" />
@@ -235,6 +238,7 @@
     <ClInclude Include="TitleCamera.h" />
     <ClInclude Include="TitleCanvas.h" />
     <ClInclude Include="TitleScene.h" />
+    <ClInclude Include="Totem.h" />
     <ClInclude Include="UIObject.h" />
     <ClInclude Include="Utils.h" />
   </ItemGroup>
